--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -7,6 +7,7 @@
 
 <html>
 <head>
+    
 
   <title>Danico</title>
 	 <!-- Mosaic -->
@@ -16,11 +17,12 @@
     <link href="../../Content/css/mosaic.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script>
+   
 
     <style type="text/css">
 		
-			/*Demo Styles*/
-			body{ background:#e9e8e4 url('img/bg-grid.png');; }
+			/*Demo Styles
+			body{ background:#e9e8e4 url('img/bg-grid.png');; }*/
 				#content{ width:845px; margin:20px auto; padding:10px 30px; }
 				.clearfix{ display: block; height: 0; clear: both; visibility: hidden; }
 						
@@ -75,14 +77,7 @@
 		    
 		</script>
 		
-     <!-- Autocomplete -->
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#address").autocomplete({
-                source: '@Url.Action("AutocompleteAsync")'
-            });
-        });
-    </script>
+    
 
 		
 
@@ -149,8 +144,15 @@
     </div>
   
     </div>
-
-
+    
+ <!-- Autocomplete -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#address").autocomplete({
+                source: '@Url.Action("AutocompleteAsync")'
+            });
+        });
+    </script>
 
 </body>
 
