--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -4,6 +4,127 @@
     ViewBag.Title = "Details";
 }
 
+
+
+<body id="portfolio">
+
+	<header>
+    	<div class="container">
+        	<div class="clearfix">
+                <div class="sixteen columns">
+                    <div class="clearfix">
+                    	<h1 id="site-title">
+                        	<a href="index.html">Interior</a>
+                            <span>designer of interior solution</span>
+                        </h1>
+                        <nav class="header">
+                            <ul>
+                                <li><a href="index.html"><span><span>Home</span></span></a></li>
+                                <li><a href="about.html"><span><span>About</span></span></a></li>
+                                <li class="current"><a href="portfolio.html"><span><span>Portfolio</span></span></a></li>
+                                <li><a href="services.html"><span><span>Services</span></span></a></li>
+                                <li><a href="contacts.html"><span><span>Contacts</span></span></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+	<div id="content">
+    	<div class="container">
+        	<div class="sixteen columns page-title">
+            	<h3>Nombre del Hotel</h3>
+                <div class="wrapper">   
+                    <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" ></label>
+                    <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="starred"></label>
+                    <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred"></label>
+                    <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred"></label>
+                    <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>    
+                </div>
+
+            </div>
+            
+        </div>
+        <div class="container">
+            <div class="clearfix">
+            
+                <div class="sixteen columns">
+                    <ul class="cat-list fright filter_list">
+                         <li><a href="javascript: void(0)" rel="*">All</a></li>
+                         <li><a href="javascript: void(0)" rel=".Category1">Category 1</a></li>
+                         <li><a href="javascript: void(0)" rel=".Category2">Category 2</a></li>
+                         <li><a href="javascript: void(0)" rel=".Category3">Category 3</a></li>
+                         <li><a href="javascript: void(0)" rel=".Category4">Category 4</a></li>
+                    </ul>
+                    <div class="clear"></div>
+                </div>
+                
+            </div>
+            
+            <div id="portfolio">
+            
+                <div class="four columns Category1">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img1.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category2">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img2.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category3">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img3.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category4">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img4.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+            
+                <div class="four columns Category1">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img5.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category2">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img6.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category3">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img7.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category4">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img8.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+            
+                <div class="four columns Category1">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img9.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                <div class="four columns Category2">
+                    <figure class="img-container">
+                        <a href="images/full-sizes/page3-img1-full.jpg" rel="prettyPhoto"><img src="images/page3-img10.jpg" alt="" class="scale-with-grid grayscale"/></a>
+                    </figure>
+                </div>
+                    
+            </div>
+            
+        </div><!-- container -->
+    </div>
+	
+</body>
+
+<!--
 <h2>Details</h2>
 
 <fieldset>
@@ -118,3 +239,5 @@
     @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+-->
+
