--- a/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
@@ -1,20 +1,153 @@
 ﻿<!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
-    <title>@ViewBag.Title</title>
+	<meta charset="utf-8">
+	<title></title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <!-- base stylesheets 
-    <link href="../../Content/css/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/example.css" rel="stylesheet" type="text/css" />
-    -->
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
+    <link href="../../Content/css/cssTheme/reset.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/layout.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/skeleton.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/prettyPhoto.css" rel="stylesheet" type="text/css" />
 
+	<script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/jquery.mobile.customized.min.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/jflickrfeed.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/imagepreloader.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/jquery.preloader.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/greyScale.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/excanvas.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/jquery.prettyPhoto.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/jsTheme/script.js" type="text/javascript"></script>
 
-   
+    
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="js/respond.src.js"></script>
+	<![endif]-->
+   <script  type="text/javascript">
+
+       preloadImages([
+			'images/nav-a-left.png',
+			'images/nav-a-right.png',
+			'images/nav-a-tail.png'
+		])
+       $(document).ready(function () {
+           if ($(document).width() > 768) { $("#portfolio a[rel^='prettyPhoto']").prettyPhoto({}); }
+           /*Filter*/
+           $('.filter_list a').click(function () {
+               $('.filter_list li').removeClass('act');
+               $(this).parent('li').addClass('act');
+               filter_class = $(this).attr('rel');
+               dm_filter('#portfolio', '#portfolio div.columns', filter_class, '1750');
+
+           });
+
+           function dm_filter($obj, $elem_type, $filter, $timer) {
+               $half = $timer / 2;
+               if ($filter == "*") {
+                   $($obj).find($elem_type).show($timer);
+
+               }
+               else {
+                   $($obj).find($elem_type).not($filter).hide($half, function () {
+                       $($obj).find($filter).show($timer, function () {
+                       });
+                   });
+               }
+           }
+
+       });
+   </script>
 </head>
+    
 
 <body>
     @RenderBody()
+
+    
 </body>
+
+
+<footer>
+    	<div class="aside">
+        	<div class="container">
+                <div class="spacer offcet-top">
+                    <div class="spacer spacer1">
+                        <div class="spacer spacer2">
+                        	<div class="clearfix">
+                            	<div class="four columns">
+                                	<h3>Flickr photostream</h3>
+                                    <ul id="flickr">
+                                    </ul>
+                                </div>
+                                <div class="four columns">
+                                	<div id="twitter-ticker">
+                                        <div id="top-bar">
+                                        	<h3 class="tut">From Twitter</h3>
+                                        </div>
+                                        <div id="tweet-container"></div>
+                                    </div>
+                                </div>
+                                <div class="four columns">
+                                	<h3>Blogroll</h3>
+                                    <ul class="blogroll">
+                                    	<li><a href="#">On the other hand we denounce</a></li> 
+                                        <li><a href="#">Righteous indignation</a></li>  
+                                        <li><a href="#">Who are so beguiled and</a></li> 
+                                        <li><a href="#">By the charms of pleasure of the</a></li> 
+                                        <li><a href="#">Cannot foresee the pain</a></li>
+                                        <li><a href="#">Belongs to those who fail in their</a></li>  
+                                        <li><a href="#">Through weakness of will</a></li>
+                                        <li><a href="#">Same as saying through shrinking</a></li> 
+                                        <li><a href="#">These cases are perfectly</a></li> 
+                                        <li><a href="#">Simple and easy to distinguish</a></li>
+                                        <li><a href="#">Untrammelled and when nothing</a></li> 
+                                        <li><a href="#">Prevents our being able</a></li> 
+                                    </ul>
+                                </div>
+                                <div class="four columns">
+                                	<h3>About</h3>
+                                    On the other hand, we denounce with 
+                                    righteous indignation and dislike men 
+                                    who are so beguiled and demoralized 
+                                    by the charms of pleasure of the 
+                                    moment, so blinded by desire, that they 
+                                    cannot foresee the pain and trouble that 
+                                    are bound to ensue; and equal blame 
+                                    belongs to those who fail in their duty 
+                                    through weakness of will, which is the 
+                                    same as saying through shrinking from 
+                                    toil and pain. These cases are perfectly 
+                                    simple and easy to distinguish.In a free 
+                                    hour, when our power of choice is 
+                                    untrammelled and when nothing 
+                                    prevents our being able to do what we 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            	</div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+        	<div class="container">
+            	<div class="clearfix">
+                	<div class="sixteen columns">
+                        <div class="fright">
+                            Copyright &copy; 2012
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </html>
