--- a/DanicoSolution/DanicoProject/Content/css/mosaic.css
+++ b/DanicoSolution/DanicoProject/Content/css/mosaic.css
@@ -91,10 +91,21 @@
 		}
 		/*** End Animation Styles ***/
 
-
-/* images
------------------------------------------------------------*/
-.image
-{
-
-}
+	.details{ margin:15px 20px; }	
+ 	h4{ font:300 16px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:160%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
+	p{ font:300 12px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa; text-shadow:1px 1px 0 rgb(0,0,0);}
+	a{ text-decoration:none; }
+    
+    #content2{  /*width:845px;*/
+	            margin:10px 40px; 
+	            padding:10px 30px; }
+		/*      				
+	#content2{ width:845px;
+	            margin:20px auto; 
+	            padding:10px 30px; }
+      
+    .clearfix{ display: block; 
+               height: 0; 
+               clear: both; 
+               visibility: hidden; }*/
+					
