--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -5,156 +5,127 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<html>
-<head>
-    
 
-  <title>Danico</title>
-	 <!-- Mosaic -->
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=8" />
-
+@section section1
+{
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=8" />
     <link href="../../Content/css/mosaic.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+    <link href="../../Content/css/searchBox.css" rel="stylesheet" type="text/css" />
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script>
-   
+    <script type="text/javascript">
 
-    <style type="text/css">
-		
-			/*Demo Styles
-			body{ background:#e9e8e4 url('img/bg-grid.png');; }*/
-				#content{ width:845px; margin:20px auto; padding:10px 30px; }
-				.clearfix{ display: block; height: 0; clear: both; visibility: hidden; }
-						
-				.details{ margin:15px 20px; }	
-					h4{ font:300 16px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:160%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
-					p{ font:300 12px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa; text-shadow:1px 1px 0 rgb(0,0,0);}
-					a{ text-decoration:none; }
-		
-		</style>
+        jQuery(function ($) {
 
-   <script type="text/javascript">
+            $('.circle').mosaic({
+                opacity: 0.8			//Opacity for overlay (0-1)
+            });
 
-       jQuery(function ($) {
+            $('.fade').mosaic();
 
-           $('.circle').mosaic({
-               opacity: 0.8			//Opacity for overlay (0-1)
-           });
+            $('.bar').mosaic({
+                animation: 'slide'		//fade or slide
+            });
 
-           $('.fade').mosaic();
+            $('.bar2').mosaic({
+                animation: 'slide'		//fade or slide
+            });
 
-           $('.bar').mosaic({
-               animation: 'slide'		//fade or slide
-           });
+            $('.bar3').mosaic({
+                animation: 'slide', //fade or slide
+                anchor_y: 'top'		//Vertical anchor position
+            });
 
-           $('.bar2').mosaic({
-               animation: 'slide'		//fade or slide
-           });
+            $('.cover').mosaic({
+                animation: 'slide', //fade or slide
+                hover_x: '400px'		//Horizontal position on hover
+            });
 
-           $('.bar3').mosaic({
-               animation: 'slide', //fade or slide
-               anchor_y: 'top'		//Vertical anchor position
-           });
+            $('.cover2').mosaic({
+                animation: 'slide', //fade or slide
+                anchor_y: 'top', 	//Vertical anchor position
+                hover_y: '80px'		//Vertical position on hover
+            });
 
-           $('.cover').mosaic({
-               animation: 'slide', //fade or slide
-               hover_x: '400px'		//Horizontal position on hover
-           });
+            $('.cover3').mosaic({
+                animation: 'slide', //fade or slide
+                hover_x: '400px', //Horizontal position on hover
+                hover_y: '300px'		//Vertical position on hover
+            });
 
-           $('.cover2').mosaic({
-               animation: 'slide', //fade or slide
-               anchor_y: 'top', 	//Vertical anchor position
-               hover_y: '80px'		//Vertical position on hover
-           });
-
-           $('.cover3').mosaic({
-               animation: 'slide', //fade or slide
-               hover_x: '400px', //Horizontal position on hover
-               hover_y: '300px'		//Vertical position on hover
-           });
-
-       });
+        });
 		    
-		</script>
-		
-    
+    </script>
 
 		
+}
 
-</head>
-<body>
+<div id="content">
 
-    <!-- titulo -->
+    <div class="container">
+        <div class="sixteen columns page-title">
+            	<div id="formdiv">
 
-    <div id="header" class="container">
-      <!--  <div id="account"><a href="/login">log in</a>
-          | <a href="/signup">sign up</a></div>-->
-      <label id="title"> Danico</label>  
-  
-    </div>
+                 <!--   @using (Html.BeginForm("Search", "Home", FormMethod.Get,
+                        new { @id = "formdivInput" }))
+                    {
+                        //<form id="new_pick" accept-charset="UTF-8" action="/picks" method="post">
+                    <div class="row">
+                        <div class="span13">
+                        @* <input id="address" name="address" placeholder="Medellin" type="text" /> *@
+                        @Html.TextBox("address", ViewBag.townFilter as string, new { @placeholder = "Medellín" })
 
-    <!-- cuerpo -->
+                         <button class="btn primary" name="button" type="submit">go</button>
 
+                        </div>
 
-    <div id="main" class="container">
-  
-       <div id="start_pick">
-
-              @using (Html.BeginForm("Search", "Home", FormMethod.Get,
-                    new { @id = "new_pick" }))
-              {
-                  //<form id="new_pick" accept-charset="UTF-8" action="/picks" method="post">
-                <div class="row">
-                    <div class="span13">
-                   @* <input id="address" name="address" placeholder="Medellin" type="text" /> *@
-                    @Html.TextBox("address", ViewBag.townFilter as string, new { @placeholder = "Medellín" })
+                        <div class="span3">
+                           
+                        </div>
                     </div>
-                    <div class="span3">
-                     <button class="btn primary" name="button" type="submit">go</button>
-                    </div>
-                </div>
-                  // </form>
-              }
+                        // </form>
+                    }-->
+                    <form id="searchbox" action="">
+                        <input id="search" type="text" placeholder="Type here">
+                        <input id="submit" type="submit" value="Search">
+                    </form>
+            </div>
+        </div>
     </div>
 
+    <div> <!-- class="container"-->
 
-     <div id="content">		
-	        @foreach (var item in Model){
-		        <!--Fade-->
-		        <div class="mosaic-block fade">
-			        <a href="http://buildinternet.com/project/mightyicons/" target="_blank" class="mosaic-overlay">
-				        <div class="details">
-					        <h4>@Html.DisplayFor(modelItem => item.name)</h4>
-					        <p>@Html.DisplayFor(modelItem => item.description) </p>
-				        </div>
-			          </a>
-			        <div class="mosaic-backdrop"><img src="@Url.Content(item.imagesDirectory)" class= "image" /></div>
-		        </div>
-             
-               <div class="mosaic-block fade">
-			        <a href="http://buildinternet.com/project/mightyicons/" target="_blank" class="mosaic-overlay">
-				        <div class="details">
-					        <h4>@Html.DisplayFor(modelItem => item.name)</h4>
-					        <p>@Html.DisplayFor(modelItem => item.description) </p>
-				        </div>
-			          </a>
-			        <div class="mosaic-backdrop"><img src="@Url.Content(item.imagesDirectory)" class= "image" /></div>
-		        </div>
-         }
-    </div>
+             <div id="content2"><!--id="content2"--> 		
+	                @foreach (var item in Model){
+		                <!--Fade-->
+		                <div class="mosaic-block fade">
+			                <a href="http://buildinternet.com/project/mightyicons/" target="_blank" class="mosaic-overlay">
+				                <div class="details">
+					                <h4>@Html.DisplayFor(modelItem => item.name)</h4>
+					                <p>@Html.DisplayFor(modelItem => item.description) </p>
+				                </div>
+			                  </a>
+			                <div class="mosaic-backdrop"><img src="@Url.Content(item.imagesDirectory)" class= "image" /></div>
+		                </div>
+
+                  }
+            </div>
   
-    </div>
+        </div>
+ 
+</div>
     
- <!-- Autocomplete -->
+    
+ <!--Autocomplete-->
     <script type="text/javascript">
         $(document).ready(function () {
             $("#address").autocomplete({
                 source: '@Url.Action("AutocompleteAsync")'
             });
         });
-    </script>
+</script>
 
-</body>
 
-</html>
 
