--- a/DanicoSolution/DanicoProject/Content/css/searchBox.css
+++ b/DanicoSolution/DanicoProject/Content/css/searchBox.css
@@ -109,3 +109,28 @@
    color: #9c9c9c !important;
  /*  font-style: italic;*/
 } 
+
+
+/***************************/
+
+.vibeButtons {
+    float: left;
+    height: 150px;
+    margin-left: 70px;
+    width: inherit;
+}
+
+element.style {
+    background-image: url("/images/buttons/SwankyPosh.png");
+    box-shadow: 0 1px 4px 0 #999999;
+}
+.vibeButtons .buttonHolder .vibeImage {
+    border: 1px solid #FFFFFF;
+    box-shadow: 0 1px 4px #999999;
+    cursor: pointer;
+    float: left;
+    height: 100px;
+    margin-bottom: 11px;
+    margin-right: 11px;
+    width: 100px;
+}
