--- a/DanicoSolution/DanicoProject/Content/css/cssTheme/style.css
+++ b/DanicoSolution/DanicoProject/Content/css/cssTheme/style.css
@@ -1231,7 +1231,7 @@ nav.footer li a:hover, nav.footer li.current a{
 		/*background-position:left bottom;*/
 	}
 	label{
-		background:url(../../images/danico/stard.png) no-repeat left bottom;
+		background:url(../../../images/danico/stard.png) no-repeat left bottom;
 		float:right;
 		line-height:20px;	
 		padding-left:20px;
