--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -95,7 +95,7 @@
                          {
                              <div class="four columns Category1">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage0)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                               </div>
                          }
@@ -103,7 +103,7 @@
                          {
                              <div class="four columns Category1">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage1)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                               </div>
                          }
@@ -111,7 +111,7 @@
                          {
                              <div class="four columns Category1">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage2)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                               </div>
                          }
@@ -126,7 +126,7 @@
                          {
                              <div class="four columns Category2">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage0)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -134,7 +134,7 @@
                          {
                              <div class="four columns Category2">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage1)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -142,7 +142,7 @@
                          {
                              <div class="four columns Category2">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage2)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -155,7 +155,7 @@
                          {  
                              <div class="four columns Category3">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage0)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -163,7 +163,7 @@
                          {
                              <div class="four columns Category3">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage1)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -171,7 +171,7 @@
                          {
                             <div class="four columns Category3">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage2)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -185,7 +185,7 @@
                          {  
                             <div class="four columns Category4">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage0)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage0" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -193,7 +193,7 @@
                          {
                             <div class="four columns Category4">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage1)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage1" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
@@ -201,11 +201,10 @@
                          {
                             <div class="four columns Category4">
                                 <figure class="img-container">
-                                    <a href="../../Content/images/Hotels/hotel14/fullSize/page3-img1-full.jpg" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
+                                    <a href="@(item.HSimagesDirectory)fullsize/@(item.HScoverImage2)" rel="prettyPhoto"><img src="@item.HSimagesDirectory@item.HScoverImage2" alt="" class="scale-with-grid grayscale"/></a>
                                 </figure>
                             </div>
                          }
-                         
                      }
                  }
                
